--- a/index.html
+++ b/index.html
@@ -1,8 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/e00f99cff5.js" crossorigin="anonymous"></script>
+    <title>Cosmo Quotes<link rel=“icon” type=“image/png” href=“assets/images/whateverpicture.png” /></title>
+</head>
 
+<body>
+    <nav>
+        <header>Cosmo Quotes</header>
+    </nav>
+    <section>
+        <hero>
+
+            <body>
+                <div class="container col s12 m6">
+                    <!-- Space API photos appear here -->
+                </div>
+            </body>
+            <div>
+                <!-- Inspirational Qoute API appears here -->
+            </div>
+            <button>
+                <!-- Click to generate daily space photo and inspirational qoute -->
+            </button>
+        </hero>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col s6 m3 pull l6">
+                <!-- share button appears here -->
+                <button id="button" class="share">
+                    <i class="fas fa-share-square"></i> 
+                </button>
+            </div>
+
+            <div class="col s6 m3 push l6">
+                <!-- Save button appears here -->
+                <button id="button" class="save"> 
+                    <i class="far fa-heart"></i> 
+                  
+                </button>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Link script.js here -->
+    <script src="assets/css/js/script.js"></script>
+</body>
+
+</html>
