added apod.js file

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <!-- Link script.js here -->
     <script src="assets/css/js/script.js"></script>
+    <script src="assets/css/js/apod.js"></script>
 </body>
 
 </html>
