--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Cosmo Quotes<link rel=“icon” type=“image/png” href=“assets/images/whateverpicture.png” /></title>
 </head>
 
-<body>
+<body id="space-img">
     <nav>
         <header>Cosmo Quotes</header>
     </nav>
