added floating buttons

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header class="header">Cosmo Quotes</header>
 
     <section>
-        <body>
-            <div class="container col s12 m6">
-                <!-- Space API photos appear here -->
-                <img id="main-img" class="responsive-img">
-            </div>
-        </body>
+
+        <div class="container col s12 m6">
+            <!-- Space API photos appear here -->
+            <img class="responsive-img">
+        </div>
+
         <div class="row">
             <div class="col s6 m3 push l6 button">
                 <!-- Save button appears here -->
