--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </body>
             <div>
                 <!-- Inspirational Qoute API appears here -->
+                  <p id="page-quote"></p>
             </div>
             <button>
                 <!-- Click to generate daily space photo and inspirational qoute -->
