--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/e00f99cff5.js" crossorigin="anonymous"></script>
     <title>Cosmo Quotes<link rel=“icon” type=“image/png” href=“assets/images/whateverpicture.png” /></title>
 </head>
@@ -52,6 +53,7 @@
     </section>
 
     <!-- Link script.js here -->
+    <script src="assets/css/js/quote.js"></script>
     <script src="assets/css/js/script.js"></script>
     <script src="assets/css/js/apod.js"></script>
 </body>
