udate html and css

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <div class="row">
             <div class="col s6 m3 push l6 button">
                 <!-- Save button appears here -->
-                <button id="button" class="btn-floating">
-                    <i class="far fa-heart "></i>
+                <button id="button-1" class="btn-floating">
+                    <i class="hoverable far fa-heart "></i>
                 </button>
-                <button id="button" class="btn-floating">
-                    <i></i>
+                
+                <button id="button-2" class="btn-floating">
+                    <i class="hoverable left-align far fa-images"></i>
                 </button>
             </div>
         </div>
