--- a/index.html
+++ b/index.html
@@ -8,43 +8,39 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/e00f99cff5.js" crossorigin="anonymous"></script>
-    <title>Cosmo Quotes
-        <link rel=“icon” type=“image/png” href=“assets/images/whateverpicture.png” />
-    </title>
-    <link rel="icon" type="image/png" href="assets/css/space-icon.png" />
+    <title>Cosmo Quotes</title>
+    <link rel="icon" type="image/png" href="assets/css/space-travel.png" />
 </head>
 
 <body id="space-img">
-    <nav>
-        <header class="header">Cosmo Quotes</header>
+    <header class="header">Cosmo Quotes</header>
 
-        <section>
-            <hero>
+    <section>
 
-                <body>
-                    <div class="container col s12 m6">
-                        <!-- Space API photos appear here -->
-                        <img class="responsive-img">
-                    </div>
+        <div class="container col s12 m6">
+            <!-- Space API photo and quote appear here -->
+            <img class="responsive-img">
+        </div>
 
-                    <div class="row">
-                        <div class="col s6 m3 push 16 button">
-                             <p id="page-quote"></p>
-                            <button id="button-1" class="btn-floating">
-                                <i class="hoverable far fa-heart "></i>
-                            </button>
-                            <button id="button-2" class="btn-floating">
-                                <i class="hoverable left-align far fa-images"></i>
-                            </button>
-                        </div>
-                    </div>
+        <div class="row">
+            <!-- add save and album button here -->
+            <div class="col s6 m3 push 16 button">
+                <p id="page-quote"></p>
+                <button id="button-1" class="btn-floating s m l">
+                    <i class="hoverable far fa-heart "></i>
+                </button>
+                <a href="album.html" id="button-2" class="btn-floating">
+                    <i class="hoverable left-align far fa-images"></i>
+                </a>
+            </div>
+        </div>
 
-        </section>
+    </section>
 
-        <!-- Link script.js here -->
-        <script src="assets/css/js/quote.js"></script>
-        <script src="assets/css/js/script.js"></script>
-        <script src="assets/css/js/apod.js"></script>
+    <!-- Link script.js here -->
+    <script src="assets/css/js/quote.js"></script>
+    <script src="assets/css/js/script.js"></script>
+    <script src="assets/css/js/apod.js"></script>
 </body>
 
 </html>
