combined js and updated css

--- a/album.html
+++ b/album.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="assets/css/space-travel.png" />
     </head>
 
-    <div>
+    <div id="img-history">
 
 
     </div>
@@ -24,9 +24,8 @@
 
 
 
-    <script src="assets/css/js/quote.js"></script>
+    
     <script src="assets/css/js/script.js"></script>
-    <script src="assets/css/js/apod.js"></script>
 </body>
 
 </html>    
