--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <link rel="icon" type="image/png" href="assets/css/space-travel.png" />
 </head>
 
-<body id="space-img">
+<body id="space-img" class="responsive-img">
     <header class="header">Cosmo Quotes</header>
 
     <section>
 
-        <div class="container col s12 m6">
+        <div class="container col s12 m6 responsive-img">
             <!-- Space API photo and quote appear here -->
-            <img class="responsive-img">
+            <img class="responsive-img ">
         </div>
 
         <div class="row">
             <!-- add save and album button here -->
             <div class="col s6 m3 push 16 button">
                 <p id="page-quote"></p>
-                <button id="button-1" class="btn-floating s m l">
+                <button id="button-1" class="btn-floating">
                     <i class="hoverable far fa-heart "></i>
                 </button>
                 <a href="album.html" id="button-2" class="btn-floating">
