history.js code and local storage

--- a/album.html
+++ b/album.html
@@ -25,7 +25,7 @@
 
 
     
-    <script src="assets/css/js/script.js"></script>
+    <script src="assets/css/js/history.js"></script>
 </body>
 
 </html>    
