--- a/album.html
+++ b/album.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="assets/css/space-travel.png" />
     </head>
 
-    <div id="img-history">
+    <div id="img-history" class="row">
 
 
     </div>
