--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section>
 
-        <div class="container col s12 m6 responsive-img">
+        <div class="container">
             <!-- Space API photo and quote appear here -->
             <img class="responsive-img ">
         </div>
