added css to album.html

--- a/album.html
+++ b/album.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/png" href="assets/css/space-travel.png" />
 </head>
 
-
-    <div id="img-history" class="container ">
+<header class="header-2">Cosmo Quotes</header>
+<div id="img-history" class="responsive-img center-align">
 
 
 </div>
@@ -26,8 +26,8 @@
 
 
 
-    
-    <script src="assets/css/js/history.js"></script>
+
+<script src="assets/css/js/history.js"></script>
 
 </body>
 
