--- a/album.html
+++ b/album.html
@@ -13,7 +13,7 @@
 </head>
 
 <header class="header-2">My Favorite Cosmo Quotes</header>
-<div class="container">
+<div class="container space-container">
 <div id="img-history" class=" row responsive-img center-align">
 
 </div>
