updated album page and added README

--- a/album.html
+++ b/album.html
@@ -14,7 +14,7 @@
 
 <header class="header-2">My Favorite Cosmo Quotes</header>
 <div class="container space-container">
-<div id="img-history" class=" row responsive-img center-align">
+<div id="img-history" class="row center-align">
 
 </div>
 </div>
