--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       </section>
     </div>
 
-    <div id="welcome-screen">
+    <div id="welcome-screen" class="container">
       <h2>Welcome to Cosmo Quotes!</h2>
-      <h3>
+      <h3 class="col s12 m6">
         Your daily reminder to enjoy the <br />
-        <span id="space-text">SPACE</span> <br />
+        <span id="space-text" class="flow-text">SPACE</span> <br />
         between where you are, and where you are going.
       </h3>
       <br />
